--- a/R_Programming_Alt/Matrices_and_Data_Frames/lesson.yaml
+++ b/R_Programming_Alt/Matrices_and_Data_Frames/lesson.yaml
@@ -114,74 +114,74 @@ Finally, let's confirm that minha_matriz and minha_matriz2 are actually identica
   Hint: Certifique-se que a primeira letra de cada nome está maiúscula e guarde o resultado em uma variável pacientes. Não misture a ordem dos pacientes! Isso seria desastroso!
 
 - Class: cmd_question
-  Output: Now we'll use the cbind() function to 'combine columns'. Don't worry about storing the result in a new variable. Just call cbind() with two arguments -- the pacientes vector and minha_matriz.
+  Output: Agora vamos utilizar a função cbind() para 'combinar colunas'. Não se preocupe em armazenar o resultado em uma nova variável. Só chame cbind para dois argumentos -- o vetor pacientes e minha_matriz.
   CorrectAnswer: cbind(pacientes, minha_matriz)
   AnswerTests: omnitest(correctExpr='cbind(pacientes, minha_matriz)')
-  Hint: Type cbind(pacientes, minha_matriz) to add the names of our pacientes to the matrix of numbers.
+  Hint: Digite cbind(pacientes, minha_matriz) para adicionar os nomes de nossos pacientes à matriz de números.
 
 - Class: text
-  Output: Something is fishy about our result! It appears that combining the character vector with our matrix of numbers caused everything to be enclosed in double quotes. This means we're left with a matrix of character strings, which is no good.
+  Output: Algo está estranho no nosso resultado! Parece que combinar o nosso vetor de caracteres com nossa matriz de números fez com que tudo ficasse entre aspas. Isso significa que temos uma matriz de caracteres, que não é o que queremos.
 
 - Class: text
-  Output: If you remember back to the beginning of this lesson, I told you that matrices can only contain ONE class of data. Therefore, when we tried to combine a character vector with a numeric matrix, R was forced to 'coerce' the numbers to characters, hence the double quotes.
+  Output: Se você se lembrar do início desta lição, contei para você que matrizes podem conter apenas UMA classe de dados. Portanto, quando tentamos combinar um vetor de caracteres com uma matriz númerica, o R 'coergiu' os números para caracteres, por isso as aspas.
 
 - Class: text
-  Output: This is called 'implicit coercion', because we didn't ask for it. It just happened. But why didn't R just convert the names of our pacientes to numbers? I'll let you ponder that question on your own.
+  Output: Isso é chamado de 'coerção implícita', porque você não pediu para isso acontecer. Só aconteceu. Mas por que o R não converteu os nomes dos nossos pacientes para números? Deixarei você ponderar a resposta por si só.
 
 - Class: cmd_question
-  Output: So, we're still left with the question of how to include the names of our pacientes in the table without destroying the integrity of our numeric data. Try the following -- my_data <- data.frame(pacientes, minha_matriz)
-  CorrectAnswer: my_data <- data.frame(pacientes, minha_matriz)
-  AnswerTests: omnitest(correctExpr='my_data <- data.frame(pacientes, minha_matriz)')
-  Hint: Type my_data <- data.frame(pacientes, minha_matriz), so we can explore what happens.
+  Output: Então, ainda precisamos resolver a questão de como incluir os nomes de nossos pacientes na tabela sem destruir a integridade dos dados números. Tente o comando a seguir – meus_dados <- data.frame(pacientes, minha_matriz)
+  CorrectAnswer: meus_dados <- data.frame(pacientes, minha_matriz)
+  AnswerTests: omnitest(correctExpr='meus_dados <- data.frame(pacientes, minha_matriz)')
+  Hint: Digite meus_dados <- data.frame(pacientes, minha_matriz) para podermos explorar o que acontece.
 
 - Class: cmd_question
-  Output: Now view the contents of my_data to see what we've come up with.
-  CorrectAnswer: my_data
-  AnswerTests: omnitest(correctExpr='my_data')
-  Hint: Type my_data to view its contents.
+  Output: Agora veja os conteúdos de meus_dados para ver o que temos.
+  CorrectAnswer: meus_dados
+  AnswerTests: omnitest(correctExpr='meus_dados')
+  Hint: Digite meus_dados para ver seus conteúdos.
 
 - Class: text
-  Output: It looks like the data.frame() function allowed us to store our character vector of names right alongside our matrix of numbers. That's exactly what we were hoping for! 
+  Output: Parece que a função data.frame() nos permitiu guardar nosso vetor de caracteres de nomes ao lado de nossa matriz de números. Que era exatamente o que queríamos!
 
 - Class: text
-  Output: Behind the scenes, the data.frame() function takes any number of arguments and returns a single object of class `data.frame` that is composed of the original objects.
+  Output: Nos bastidores, a função data.frame() recebe qualquer número de argumentos e retorna um único objeto de classe `data.frame` composto dos objetos originais.
 
 - Class: cmd_question
-  Output: Let's confirm this by calling the class() function on our newly created data frame.
-  CorrectAnswer: class(my_data)
-  AnswerTests: omnitest(correctExpr='class(my_data)')
-  Hint: The class function takes one argument -- the object of which you want to determine the class.
+  Output: Vamos confirmar isso chamando a função class() no nosso data frame recém criado.
+  CorrectAnswer: class(meus_dados)
+  AnswerTests: omnitest(correctExpr='class(meus_dados)')
+  Hint: A função class() recebe um argumento -- o objeto do qual você quer determinar a classe.
 
 - Class: text
-  Output: It's also possible to assign names to the individual rows and columns of a data frame, which presents another possible way of determining which row of values in our table belongs to each patient.
+  Output: Também é possível designar nomes às colunas e linhas de um data frame, que apresenta outra possibilidade de determinar que linha de valores de nossa tabela pertence a cada paciente.
 
 - Class: text
-  Output: However, since we've already solved that problem, let's solve a different problem by assigning names to the columns of our data frame so that we know what type of measurement each column represents.
+  Output: Entretanto, já que já resolvemos esse problema, vamos resolver um problema diferente determinando nomes para as colunas de nosso data frame para sabermos que tipo de medida cada coluna representa.
 
 - Class: cmd_question
-  Output: Since we have six columns (including patient names), we'll need to first create a vector containing one element for each column. Create a character vector called cnames that contains the following values (in order) -- "patient", "age", "weight", "bp", "rating", "test".
-  CorrectAnswer: cnames <- c("patient", "age", "weight", "bp", "rating", "test")
-  AnswerTests: omnitest(correctExpr='cnames <- c("patient", "age", "weight", "bp", "rating", "test")')
-  Hint: Make sure all of the names are lowercase, surrounded by double quotes, and separated with commas. Don't forget to use the c() function.
+  Output: Já que temos seis colunas (incluindo nomes de pacientes), vamos precisar primeiro criar um vetor contendo um elemento para cada coluna. Crie um vetor de caracteres chamado cnomes que contém os seguintes valores (em ordem) -- “paciente”, “idade”, “peso”, “pressão”, “avaliação” e “teste”.
+  CorrectAnswer: cnomes <- c(“paciente”, “idade”, “peso”, “pressão”, “avaliação”, “teste”)
+  AnswerTests: omnitest(correctExpr='cnomes <-c(“paciente”, “idade”, “peso”, “pressão”, “avaliação”, “teste”)')
+  Hint: Certifique-se que os nomes estão todos em letra minúscula, entre aspas, separados com vírgulas. Não esqueça de usar a função c().
 
 - Class: cmd_question
-  Output: Now, use the colnames() function to set the `colnames` attribute for our data frame. This is similar to the way we used the dim() function earlier in this lesson.
-  CorrectAnswer: colnames(my_data) <- cnames
-  AnswerTests: omnitest(correctExpr='colnames(my_data) <- cnames')
-  Hint: Try colnames(my_data) <- cnames.
+  Output: Agora, use a função colnames() para designar o atributo `colnames` (nomes de colunas) no nosso data frame. Isso é simialr à forma que usamos a função dim() antes nessa lição.
+  CorrectAnswer: colnames(meus_dados) <- cnomes
+  AnswerTests: omnitest(correctExpr='colnames(meus_dados) <- cnomes')
+  Hint: Try colnames(meus_dados) <- cnomes.
 
 - Class: cmd_question
-  Output: Let's see if that got the job done. Print the contents of my_data.
-  CorrectAnswer: my_data
-  AnswerTests: omnitest(correctExpr='my_data')
-  Hint: Print the contents of my_data to the console.
+  Output: Vamos ver se isso funcionou. Visualize o conteúdo de meus_dados.
+  CorrectAnswer: meus_dados
+  AnswerTests: omnitest(correctExpr='meus_dados')
+  Hint: Digite meus_dados no console e aperte ENTER.
 
 - Class: text
-  Output: In this lesson, you learned the basics of working with two very important and common data structures -- matrices and data frames. There's much more to learn and we'll be covering more advanced topics, particularly with respect to data frames, in future lessons.
+  Output: Nessa lição, você aprendeu o básico sobre trabalhar com duas formas muito importantes e comuns de dados -- matrizes e data frames. Há muito mais para aprender e vamos cobrir tópicos mais avançados, particularmente com respeito a data frames, em lições futuras.
 
 - Class: mult_question
-  Output: Would you like to inform someone about your successful completion of this lesson?
+  Output: Você gostaria de informar alguém sobre seu sucesso em completar essa lição?
   CorrectAnswer: NULL
-  AnswerChoices: Yes; No
+  AnswerChoices: Sim; Não
   AnswerTests: notify()
   Hint: NULL
